# CAD-service

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
sandbox/: abc.py  split.py  split_stp.py  step_to_dxf_flat.py  step_to_svg.py  stp_to_dxf.py  testing.py
sandbox/parts/: child_001_Rocky_House.stp  child_002_Rocky_House001.stp  child_003_Rocky_House002.stp  child_004_Rocky_House003.stp  child_005_Rocky_House004.stp  child_006_Rocky_House005.stp  child_007_Rocky_House006.stp  child_008_Rocky_House007.stp  child_009_Rocky_House008.stp  child_010_Rocky_House009.stp  child_011_Rocky_House010.stp  child_012_Rocky_House011.stp  child_013_Rocky_House012.stp  child_014_Rocky_House013.stp  child_015_Rocky_House014.stp  child_016_Rocky_House015.stp  child_017_Rocky_House016.stp  child_018_Rocky_House017.stp  child_019_Rocky_House018.stp  child_020_Rocky_House019.stp  child_021_Rocky_House020.stp  child_022_Rocky_House021.stp  child_023_Rocky_House022.stp  child_024_Rocky_House023.stp  child_025_Rocky_House024.stp  child_026_Rocky_House025.stp  child_027_Rocky_House026.stp  child_028_Rocky_House027.stp  child_029_Rocky_House028.stp  child_030_Rocky_House029.stp  child_031_Rocky_House030.stp  child_032_Rocky_House031.stp  child_033_Rocky_House032.stp  child_034_Rocky_House033.stp  child_035_Rocky_House034.stp  child_036_Rocky_House035.stp  child_037_Rocky_House036.stp  child_038_Rocky_House037.stp  child_039_Rocky_House038.stp  child_040_Rocky_House039.stp  (+121 more)
sandbox/parts/L_0_Ground005/: L_0_Ground005.stp
sandbox/parts/L_0_Ground005/L_0_Ground/: L_0_Ground.stp
sandbox/parts/L_0_Ground005/L_0_Ground001/: L_0_Ground001.stp
sandbox/parts/L_0_Ground005/L_0_Ground002/: L_0_Ground002.stp
sandbox/parts/L_0_Ground005/L_0_Ground003/: L_0_Ground003.stp
sandbox/parts/L_0_Ground005/L_0_Ground004/: L_0_Ground004.stp
sandbox/parts/L_0_Inside_Asm/: L_0_Inside_Asm.stp
sandbox/parts/L_0_Inside_Asm/L_0_Base005/: L_0_Base005.stp
sandbox/parts/Little_Roof/: Little_Roof.stp
sandbox/parts/Roof015/: Roof015.stp
scripts/: entrypoint.sh  split_stp.py
src/: app.py  config.py  database.py  splitter.py  storage.py  supabase.py  workflow.py
src/api/: __init__.py  dependencies.py  routes.py  utils.py
src/cad/: dxf.py  layouts.py  service.py  splitter.py  storage.py  types.py  workflow.py
src/core/: config.py
src/models/: __init__.py  split.py
src/models/responses/: message.py  split.py
tests/: test_splitter.py
(+186 files in other folders)
