[tool.poetry]
name = "cad-service"
version = "0.1.0"
description = "Dockerised FreeCAD microservice."
authors = ["CAD Service Team <team@example.com>"]
readme = "README.md"
package-mode = true
packages = [{ include = "*", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
supabase = "^2.3.0"
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
python-multipart = "^0.0.9"
ezdxf = "^1.4.3"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"
mypy = "^1.10.0"
black = "^24.4.2"
types-requests = "^2.31.0.6"

[tool.poetry.scripts]
cad-service = "app:run"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
namespace_packages = true
packages = ["cad_service"]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
