[tool.poetry]
name = "cad-service"
version = "0.1.0"
description = "CAD STEP Splitter Service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.111.0"
uvicorn = "0.30.0"
supabase = "2.5.1"
pydantic = "2.7.0"
python-dotenv = "1.0.1"
python-multipart = "0.0.9"
loguru = "0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
